# context

./: .gitignore  CHANGELOG.md  LICENSE.md  QUICK_REFERENCE.md  README.md  build.sh  docker-compose.yml
sdk/python/: README.md  pyproject.toml  ral_sdk.py
services/ral-core/: .env.example  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
services/ral-core/alembic/: env.py
services/ral-core/alembic/versions/: 001_initial.py  f4474d6e8b85_add_missing_user_columns.py
services/ral-core/app/: __init__.py  cli.py  main.py
services/ral-core/app/adapters/: __init__.py  anthropic_adapter.py  base.py  factory.py  google_adapter.py  openai_adapter.py
services/ral-core/app/api/: __init__.py
services/ral-core/app/api/v0/: __init__.py  context.py  drift.py  prompt.py  universal.py
services/ral-core/app/api/v1/: auth.py  context.py  dashboard.py  prompt.py  users.py
services/ral-core/app/core/: __init__.py  config.py  contextual_decay.py  database.py  event_bus.py  hardware_ingress.py  logging.py  privacy_shield.py  redis.py  security.py  semantic_versioning.py
services/ral-core/app/engines/: __init__.py  advanced_composer.py  composer.py  drift.py  resolver.py  situational.py  spatial.py  temporal.py
services/ral-core/app/models/: __init__.py  base.py  compat.py  context.py  tenant.py  user.py
services/ral-core/app/schemas/: __init__.py  auth.py  base.py  context.py  prompt.py  spatial.py  temporal.py  user.py
services/ral-core/app/services/: __init__.py  context_memory.py  tenant_service.py  user_service.py
services/ral-core/tests/: __init__.py  conftest.py  test_drift_detector.py  test_integration_scenarios.py  test_prompt_composer.py  test_temporal_engine.py  test_tenant_isolation.py
services/ral-core/tests/artifacts/prompts/: SCENARIO_1_MIDNIGHT_BOUNDARY_20260104_015948.json  SCENARIO_1_MIDNIGHT_BOUNDARY_20260104_020016.json  SCENARIO_1_MIDNIGHT_BOUNDARY_20260104_020537.json  SCENARIO_3_TTL_EXPIRY_20260104_015948.json  SCENARIO_3_TTL_EXPIRY_20260104_020016.json  SCENARIO_3_TTL_EXPIRY_20260104_020537.json  SCENARIO_4_DRIFT_ACCUMULATION_20260104_015748.json  SCENARIO_4_DRIFT_ACCUMULATION_20260104_015849.json  SCENARIO_4_DRIFT_ACCUMULATION_20260104_015948.json  SCENARIO_4_DRIFT_ACCUMULATION_20260104_020016.json  SCENARIO_4_DRIFT_ACCUMULATION_20260104_020537.json  SCENARIO_5_EMAIL_AUDIT_20260104_015748.json  SCENARIO_5_EMAIL_AUDIT_20260104_015849.json  SCENARIO_5_EMAIL_AUDIT_20260104_015948.json  SCENARIO_5_EMAIL_AUDIT_20260104_020016.json  SCENARIO_5_EMAIL_AUDIT_20260104_020537.json  SCENARIO_5_SSN_CHECK_20260104_015748.json  SCENARIO_5_SSN_CHECK_20260104_015849.json  SCENARIO_5_SSN_CHECK_20260104_015948.json  SCENARIO_5_SSN_CHECK_20260104_020016.json  SCENARIO_5_SSN_CHECK_20260104_020537.json  SCENARIO_6_MINIMAL_INJECTION_20260104_015748.json  SCENARIO_6_MINIMAL_INJECTION_20260104_015849.json  SCENARIO_6_MINIMAL_INJECTION_20260104_015948.json  SCENARIO_6_MINIMAL_INJECTION_20260104_020016.json  SCENARIO_6_MINIMAL_INJECTION_20260104_020537.json  SCENARIO_6_SELECTION_DOCUMENTED_20260104_015748.json  (+4 more)
(+64 files in other folders)
