[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ral-sdk"
version = "0.1.0"
description = "RAL SDK - Context-aware AI augmentation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "RAL Team", email = "team@ral.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "context", "augmentation", "llm", "openai", "anthropic"]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "responses>=0.23",
]

[project.scripts]
ral = "ral_sdk:main"

[project.urls]
Homepage = "https://github.com/ral-dev/ral"
Documentation = "https://docs.ral.dev"
Repository = "https://github.com/ral-dev/ral"

[tool.setuptools]
py-modules = ["ral_sdk"]
